[gd_scene load_steps=65 format=3 uid="uid://cttrf5bvjpe7r"]

[ext_resource type="Script" uid="uid://bc482bl4p70rc" path="res://Scripts/henchmen.gd" id="1_7keci"]
[ext_resource type="Texture2D" uid="uid://b7uj8y2p8mcmm" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/SLOT_!_TRYANA_SHIT/Free Moonlit Forest Pixel Platformer Asset Pack 1.2/'Free' Moonlit Character 2D Pixel Art/Blue Sprite/Katana Continuous Attack/No Outline Version/player katana continuous attack 80x64-Sheet - No Outline.png" id="1_vgqql"]
[ext_resource type="Texture2D" uid="uid://c6sexkg7i5n0r" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/SLOT_!_TRYANA_SHIT/Free Moonlit Forest Pixel Platformer Asset Pack 1.2/'Free' Moonlit Character 2D Pixel Art/Blue Sprite/Idle/Outline Versions/Player Idle 48x48-Sheet Black Outline.png" id="2_fkybt"]
[ext_resource type="Texture2D" uid="uid://c46anww1pcfu0" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/SLOT_!_TRYANA_SHIT/Free Moonlit Forest Pixel Platformer Asset Pack 1.2/'Free' Moonlit Character 2D Pixel Art/Blue Sprite/Jump/Outline Versions/player new jump 48x48-Sheet Black Outline.png" id="3_x3wgy"]
[ext_resource type="Texture2D" uid="uid://6l643dax28cn" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/evil_1_walk.png" id="3_y4q44"]
[ext_resource type="Texture2D" uid="uid://bs2ocwgo4jjhj" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/SLOT_!_TRYANA_SHIT/Free Moonlit Forest Pixel Platformer Asset Pack 1.2/'Free' Moonlit Character 2D Pixel Art/Blue Sprite/Run/Outline Versions/player run 48x48-Sheet Black Outline.png" id="4_3smsa"]
[ext_resource type="Texture2D" uid="uid://b0jb5fci8w2ii" path="res://We_HAVE_BEEN_HERE_BEFORE_ASSETS/evil_1_run.png" id="4_sgjvh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_vgqql")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_vgqql")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_vgqql")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_vgqql")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_vgqql")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_vgqql")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_vgqql")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_vgqql")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_vgqql")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgjvh"]
atlas = ExtResource("3_y4q44")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt1en"]
atlas = ExtResource("3_y4q44")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cmfh"]
atlas = ExtResource("3_y4q44")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m6fk"]
atlas = ExtResource("3_y4q44")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vueym"]
atlas = ExtResource("3_y4q44")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv6pf"]
atlas = ExtResource("3_y4q44")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3n1h"]
atlas = ExtResource("3_y4q44")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6vy"]
atlas = ExtResource("3_y4q44")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o3tw"]
atlas = ExtResource("3_y4q44")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_affup"]
atlas = ExtResource("3_y4q44")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7pct"]
atlas = ExtResource("4_sgjvh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibdx"]
atlas = ExtResource("4_sgjvh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_utts2"]
atlas = ExtResource("4_sgjvh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmomj"]
atlas = ExtResource("4_sgjvh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4183"]
atlas = ExtResource("4_sgjvh")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qvod"]
atlas = ExtResource("4_sgjvh")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ombr"]
atlas = ExtResource("4_sgjvh")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv00x"]
atlas = ExtResource("4_sgjvh")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("2_fkybt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("2_fkybt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("2_fkybt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("2_fkybt")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("2_fkybt")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("2_fkybt")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("2_fkybt")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("2_fkybt")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("2_fkybt")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("2_fkybt")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("3_x3wgy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("3_x3wgy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("3_x3wgy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("3_x3wgy")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("3_x3wgy")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("3_x3wgy")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("4_3smsa")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("4_3smsa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("4_3smsa")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("4_3smsa")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("4_3smsa")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("4_3smsa")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("4_3smsa")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("4_3smsa")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgqql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": true,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgjvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt1en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cmfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m6fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vueym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv6pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3n1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o3tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_affup")
}],
"loop": true,
"name": &"evil",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7pct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utts2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmomj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4183")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qvod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ombr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv00x")
}],
"loop": true,
"name": &"evil_run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkybt"]
size = Vector2(10, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_y4q44"]
radius = 37.054016

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74tp2"]
size = Vector2(16, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_audkd"]
size = Vector2(4692, 2901)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_audkd"]
bg_color = Color(0.14117648, 1, 0.9764706, 1)
border_width_left = 2
border_width_bottom = 1
border_color = Color(0, 0, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 16
corner_radius_bottom_right = 2
corner_radius_bottom_left = 20

[node name="henchman" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_7keci")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_vgqql")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_fkybt")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(3, 4)
target_position = Vector2(14, 11)
collide_with_areas = true

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2(3, 2)
target_position = Vector2(18, 0)

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(3, 3)
shape = SubResource("CircleShape2D_y4q44")

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_74tp2")

[node name="detection" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(216, -234.5)
shape = SubResource("RectangleShape2D_audkd")

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -13.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = -22.0
theme_override_font_sizes/font_size = 7
theme_override_styles/fill = SubResource("StyleBoxFlat_audkd")
value = 50.0
rounded = true
show_percentage = false

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
